New Challenge Problems Cleanup